# SmartESP

./: .gitignore  CMakeLists.txt
components/: CMakeLists.txt  global_config.h  test.c
components/Led/: led_tt.c  led_tt.h
components/include/: user.h
components/soket_tcp/: soket_tcp_tt.c  soket_tcp_tt.h
components/uart/: uart_tt.c  uart_tt.h
components/wifi/: wifi_tt.c  wifi_tt.h
main/: CMakeLists.txt  main.c
